--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap'
+
+.carousel-inner .sr-only 
+   display: none
+
+.carousel-inner
+    text-align: center
+    
+
+.carousel-control-prev
+    color: black
+.carousel-control-next
+    color: black
+
+
+.carousel-control-next-icon
+    background-color: black
+    color: black
+.carousel-control-prev-icon
+    background-color: black
+    color: black
+.carousel-indicators    
+    bottom: -50px
+    display: flex
+    gap: 20px
+.carousel-indicators li
+   background-color: black
+   width: 20px
+   height: 20px
+   border-radius: 100%
+.carousel-inner iframe
+    width:80%
+    height: 13rem
+body
+    height: 200rem
+    
