main page good?

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,21 +1,13 @@
 <ngb-carousel [interval]=0 >
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <youtube-player 
-  videoId="8AcNEVUzV4o" 
-  suggestedQuality="highres" 
-   > 
-</youtube-player>
+      <img src="https://bestsimilar.com/img/movie/thumb/17/64184.jpg">
     </div>
     
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-       <youtube-player 
-  videoId="1xh8cujxUGs" 
-  suggestedQuality="highres" 
-   > 
-</youtube-player>
+       <img src= "http://puui.qpic.cn/vcover_hz_pic/0/4atd5mcgi2uwnvr1580269669/0">
     </div>
     <div class="carousel-caption">
       <h3>What's Wrong with Secretary Kim?</h3>
@@ -24,11 +16,7 @@
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-       <youtube-player 
-  videoId="GVQGWgeVc4k" 
-  suggestedQuality="highres" 
-   > 
-</youtube-player>
+       <img src="https://images.squarespace-cdn.com/content/v1/5796c3fc15d5dbda8ad72bf9/1594350975169-1IR3CNR6KGT3ARR3PBPV/CrashLandingOnYou.jpg">
     </div>
     <div class="carousel-caption">
       <h3>Crash Landing on You</h3>
