--- a/src/styles.sass
+++ b/src/styles.sass
@@ -33,7 +33,21 @@
    border-radius: 100%
 
 body
-    height: 200rem
+    height: fit-content
     
 
-    
+.navbar  
+    flex-direction: column
+    gap: 60px
+
+.logo
+    width: 40%
+    margin-left: 22rem
+.trending
+    display: flex
+    flex-direction: row
+    gap: 15px
+    overflow: scroll
+.trending img
+    height: 500px
+    width: 333px
