--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<img src="https://res.cloudinary.com/dt5zbnwvr/image/upload/v1631398246/Cute_Love_Floral_Illustration_Logo_fpbc4m.png"> 
+<img class="logo" src="https://res.cloudinary.com/dx3a3l6k0/image/upload/v1631742201/Cute_Love_Floral_Illustration_Logo_fpbc4m_mqq4aq.png"> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-  <a class="navbar-brand" [routerLink]="'.'">Responsive navbar</a>
+  
 
   <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
@@ -12,20 +12,23 @@
     <ul class="navbar-nav">
       <li class="nav-item active">
         <!-- Step 4: Close the menu when a link is clicked. -->
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Features</a>
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Examples</a>
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Explore</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">My List</a>
       </li>
     </ul>
   </div>
 </nav>
 <app-carousel></app-carousel>
-<h2>Trending</h2>
+<h2 class="trendhd">Trending</h2>
 <app-trending></app-trending>
-<h2>recommended</h2>
+<h2 class="recommendhd">Recommended For You</h2>
 <app-recommended></app-recommended>
 <router-outlet></router-outlet>
