--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -1,9 +1,8 @@
 <div class="trending">
-<img src="https://flxt.tmsimg.com/assets/p18041284_b_h9_aa.jpg">
+<img src="https://i.mydramalist.com/pVv6D_3m.jpg">
 <img src="https://coffeekdramaandotherobsessions.files.wordpress.com/2020/12/true.jpg">
 <img src="https://m.media-amazon.com/images/M/MV5BNWU3M2YxZmEtZTZiMi00NTBhLWEyYWMtOTBhOTEyMzkyYmI4XkEyXkFqcGdeQXVyMTA3MzQ4MTc0._V1_.jpg">
-<img src="https://i.ytimg.com/vi/bdodqBvObG0/maxresdefault.jpg">
-<img src="https://pic5.iqiyipic.com/image/20210719/4c/1c/a_100404929_m_601_en_m9_480_270.jpg">
-<img src="https://lh3.googleusercontent.com/proxy/DdHHuqvOGtJ1aZ7wWd49AdvAfrnfpfTbY6HU9kybFyMNi0ARKcrqFYJwXmj72JsdZ_q0PVMgwCgKVmdWgm-BDqB3CZrw4pcU3WrYtMPtsRKNtWLTkj5-zezOUGxH-n2QVC8QotqNdG-mD-6utoaQ40GJzdlYvvx0pRIA3u6gY_nnWvmjFVIy5_zXy8DI5g44">
+<img src="https://images.now-tv.com/shares/vod_images/vi_voddrama_series_desc_t/202012/en_us/original_vertical/s202012030119645">
+<img src="https://m.media-amazon.com/images/M/MV5BZGEzMjMxNmItYWM2MC00MGU3LTk2YmQtYjUyOTVjYTRlZDQ3XkEyXkFqcGdeQXVyNDU4MDQ0MjM@._V1_.jpg">
 <img src="https://asianwiki.com/images/d/de/Police_University-p1.jpg">
 </div>
