--- a/src/styles.sass
+++ b/src/styles.sass
@@ -34,6 +34,7 @@
 
 body
     height: fit-content
+    background-color: #DBDBD9
     
 
 .navbar  
@@ -51,3 +52,7 @@ body
 .trending img
     height: 500px
     width: 333px
+
+.picsum-img-wrapper img
+    width: 966px
+    height: 547px
