--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,4 +31,5 @@
 <app-trending></app-trending>
 <h2 class="recommendhd">Recommended For You</h2>
 <app-recommended></app-recommended>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
