--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel [interval]=0 >
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="https://bestsimilar.com/img/movie/thumb/17/64184.jpg">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/71bbd82fQiL._RI_.jpg">
     </div>
     
   </ng-template>
@@ -9,18 +9,12 @@
     <div class="picsum-img-wrapper">
        <img src= "http://puui.qpic.cn/vcover_hz_pic/0/4atd5mcgi2uwnvr1580269669/0">
     </div>
-    <div class="carousel-caption">
-      <h3>What's Wrong with Secretary Kim?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
+    
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
        <img src="https://images.squarespace-cdn.com/content/v1/5796c3fc15d5dbda8ad72bf9/1594350975169-1IR3CNR6KGT3ARR3PBPV/CrashLandingOnYou.jpg">
     </div>
-    <div class="carousel-caption">
-      <h3>Crash Landing on You</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
+   
   </ng-template>
 </ngb-carousel>
