--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -1,5 +1,5 @@
 <div class="trending">
-<img src="https://i.mydramalist.com/pVv6D_3m.jpg">
+<img src="https://pbs.twimg.com/media/EVytMxPUcAA4m_t.jpg">
 <img src="https://coffeekdramaandotherobsessions.files.wordpress.com/2020/12/true.jpg">
 <img src="https://m.media-amazon.com/images/M/MV5BNWU3M2YxZmEtZTZiMi00NTBhLWEyYWMtOTBhOTEyMzkyYmI4XkEyXkFqcGdeQXVyMTA3MzQ4MTc0._V1_.jpg">
 <img src="https://images.now-tv.com/shares/vod_images/vi_voddrama_series_desc_t/202012/en_us/original_vertical/s202012030119645">
