single page and all done

--- a/src/app/all-dramas/all-dramas.component.html
+++ b/src/app/all-dramas/all-dramas.component.html
@@ -1,6 +1,7 @@
 <div *ngFor="let show of kdsrv.shows; index as i">
-    <a [routerLink]="'/show/' + show.id"><img [src]="show.image" alt="image"> </a>
-    <h1>{{show.description}}</h1>
-    <h1>{{show.title}}</h1>
+    <a [routerLink]="'/show/' + show[0].id"><img [src]="show[0].image" alt="image"> </a>
+    <h1>{{show[0].description}}</h1>
+    <h1>{{show[0].title}}</h1>
     
 </div>
+<app-footer></app-footer>
