--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
       </li>
        <li class="nav-item">
         <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">My List</a>
+      </li>      
+       <li class="nav-item">
+        <a class="nav-link" [routerLink]="'/signup'" (click)="isMenuCollapsed = true">Signup</a>
       </li>
     </ul>
   </div>
