--- a/src/app/single-drama/single-drama.component.html
+++ b/src/app/single-drama/single-drama.component.html
@@ -1,17 +1,19 @@
 
-<div>
+<div class="singledrama">
 <h1>{{shows.title}}</h1>
-<h1 >{{shows.description}}</h1>
-<p>{{shows.episode_numbers}}</p>
-<p>{{shows.genre}}</p>
-<p>{{shows.release_year}}</p>
-<p>{{shows.streaming_platform}}</p>
-<p>{{shows.writer}}</p>
+<p >{{shows.description}}</p>
+<p>episodes: {{shows.episode_numbers}}</p>
+<p>Genres: {{shows.genre}}</p>
+<p> year released:{{shows.release_year}}</p>
+<p>Where  you can watch it: {{shows.streaming_platform}}</p>
+<p>Writer: {{shows.writer}}</p>
 <img [src]= "shows.image">
+
 <div *ngFor="let actors of shows.actors">
-<p >{{actors.name}}</p>
+<p > Actor: {{actors.name}}</p>
 <img [src]= "actors.photo">
 </div>
+
 </div>
 
 <app-footer></app-footer>
