--- a/src/app/single-drama/single-drama.component.html
+++ b/src/app/single-drama/single-drama.component.html
@@ -1,19 +1,26 @@
 
 <div class="singledrama">
-<h1>{{shows.title}}</h1>
-<p >{{shows.description}}</p>
-<p>episodes: {{shows.episode_numbers}}</p>
-<p>Genres: {{shows.genre}}</p>
-<p> year released:{{shows.release_year}}</p>
-<p>Where  you can watch it: {{shows.streaming_platform}}</p>
-<p>Writer: {{shows.writer}}</p>
-<img [src]= "shows.image">
+<h1 class='title'>{{shows.title}}
+<img class= 'singlemovie' [src]= "shows.image">
+</h1>
 
-<div *ngFor="let actors of shows.actors">
-<p > Actor: {{actors.name}}</p>
-<img [src]= "actors.photo">
+
+<div class='info'>
+<p>Episodes : {{shows.episode_numbers}}</p>
+<p>Genres : {{shows.genre}}</p>
+<p> Year Released : {{shows.release_year}}</p>
+<p>Watch it on : {{shows.streaming_platform}}</p>
+<p>Writer :  {{shows.writer}}</p>
+<p >Synopsis : {{shows.description}}</p>
+<a class="nav-link" [routerLink]="'/mylist'" (click)="isMenuCollapsed = true"><button>My List</button></a>
 </div>
+<div class='flex'>
+<div *ngFor="let actors of shows.actors" class='actors'>
+<p >  {{actors.name}}</p>
+<img class='actor'[src]= "actors.photo">
 
+</div>
+</div>
 </div>
 
 <app-footer></app-footer>
