--- a/src/app/all-dramas/all-dramas.component.html
+++ b/src/app/all-dramas/all-dramas.component.html
@@ -1,6 +1,7 @@
-<div *ngFor="let show of kdsrv.shows; index as i">
+<div class='center'>
+<div class='allcard' *ngFor="let show of kdsrv.shows; index as i">
 
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3 " >
   <div class="row g-0">
     <div class="col-md-4">
        <a [routerLink]="'/show/' + show[0].id"><img [src]="show[0].image" alt="image" class="img-fluid"> </a>
@@ -9,16 +10,14 @@
       <div class="card-body">
         <h5 class="card-title">{{show[0].title}}</h5>
         <p class="card-text">
-          episodes: {{show[0].epiisode_numbers}}
+          Episodes: {{show[0].episode_numbers}}
         </p>
-        <p class="card-text">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </p>
+        
       </div>
     </div>
   </div>
 </div>
-  
+</div>
     
     
 </div>
