--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" [routerLink]="'/show'" routerLinkActive="active" (click)="isMenuCollapsed = true">Explore</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
+        <a class="nav-link" [routerLink]="'/about'" (click)="isMenuCollapsed = true">About</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" [routerLink]="'/mylist'" (click)="isMenuCollapsed = true">My List</a>
