--- a/src/app/single-drama/single-drama.component.html
+++ b/src/app/single-drama/single-drama.component.html
@@ -12,6 +12,7 @@
 <p>Watch it on : {{shows.streaming_platform}}</p>
 <p>Writer :  {{shows.writer}}</p>
 <p >Synopsis : {{shows.description}}</p>
+<button (click)='addToList(shows)'> Add to list</button>
 <a class="nav-link" [routerLink]="'/mylist'" (click)="isMenuCollapsed = true"><button>My List</button></a>
 </div>
 <div class='flex'>
