--- a/src/app/all-dramas/all-dramas.component.sass
+++ b/src/app/all-dramas/all-dramas.component.sass
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap')
+
 .img-fluid
-    width: 250px
+    width: 240px
     height: 300px
 
 .center 
@@ -10,4 +12,9 @@
 .card
     width: 1000px!important
 .card-title
-    font-size: 40px
+    font-size: 35px
+    font-family: 'Cinzel', serif
+.card-text 
+    font-size: 25px
+    margin-top: 5%
+
