--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,3 +4,13 @@
 .recommendhd
     text-align: center
     margin-top: 2%
+.helper
+    display: flex
+    justify-content: center
+.logo
+    width: 500px
+.flexme
+    display: flex
+    width: 100%
+    align-content: flex-end
+    justify-content: space-evenly
