--- a/src/app/single-drama/single-drama.component.sass
+++ b/src/app/single-drama/single-drama.component.sass
@@ -43,3 +43,11 @@
     grid-column-start: 2
     flex-direction: column
     margin-top: 8%
+
+.addto button
+    border: none
+    background-color: #A5DAFA
+    padding: 10px
+    color: white
+    border-radius: 15px
+    margin-left: -10px
