--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,7 @@
-<h3>Are you a fan of K-dramas? 
+<h1 class='about'>About K-Drama Love</h1>
+
+
+<h4>Are you a fan of K-dramas? 
 Were you ever eager to watch a 
 particular drama but unable to find English subtitles? 
 Or are you new to K-drama and dont know where to begin? 
@@ -7,7 +10,8 @@ streaming platforms while helping you discover the next
 show to watch. You can provide your own ratings, add dramas 
 to your own watchlist and see what others are watching! 
 We aim to make K-dramas more accessible 
-to fans all over the world.</h3>
-<img [src]="'https://i.pinimg.com/originals/a9/7c/21/a97c21d633055f968ab0364c0ed656d4.gif'">
-
+to fans all over the world.</h4>
+<div class =' helper'>
+<img class='cute'[src]="'https://i.pinimg.com/originals/a9/7c/21/a97c21d633055f968ab0364c0ed656d4.gif'">
+</div>
 <app-footer></app-footer>
