--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,2 @@
-<p>Hey, how's it goin? you ever drink old baileys from a shoe?</p>
+<hr/>
+<img class='cuter' [src]= "'https://res.cloudinary.com/dt5zbnwvr/image/upload/v1632239846/Screen_Shot_2021-09-21_at_10.56.17_AM_uxu4w7.png'">
