--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -1,4 +1,5 @@
-p
-    margin-top: 1rem
-    margin-bottom: 0
-    text-align: center
+.cuter
+    width: 100%
+    height: 365px
+hr
+    margin-top: 30px
