--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,3 +4,4 @@
 <app-trending></app-trending>
 <h2 class="recommendhd">Recommended For You</h2>
 <app-recommended></app-recommended>
+<app-footer></app-footer>
