--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <form #myform='ngForm' (ngSubmit)='handleSubmit(myform)'>
-<input type ='email' name='email' ngModel>
-<input type ='password' name='password' ngModel>
-<input type='submit' value='submit'>
+<input class='input' type ='email' name='email' placeholder='email' ngModel>
+<input class='input' type ='password' name='password' placeholder='password' ngModel>
+<input  class='submit'type='submit' value='submit'>
 </form>
+<app-footer></app-footer>
