--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,4 +3,7 @@
 <input class='input' type ='password' name='password' placeholder='password' ngModel>
 <input  class='submit'type='submit' value='submit'>
 </form>
+
+<div class='center'>
 <app-footer></app-footer>
+<div>
