--- a/src/app/single-drama/single-drama.component.html
+++ b/src/app/single-drama/single-drama.component.html
@@ -1,4 +1,4 @@
-
+<div class='center'>
 <div class="singledrama">
 <h1 class='title'>{{shows.title}}
 <img class= 'singlemovie' [src]= "shows.image">
@@ -23,5 +23,5 @@
 </div>
 </div>
 </div>
-
 <app-footer></app-footer>
+</div>
