--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,4 +3,6 @@
 <input type ='password' name='password' placeholder='password' ngModel>
 <input type='submit' value='submit'>
 </form>
+<div class='center'>
 <app-footer></app-footer>
+<div>
