--- a/src/app/form/form.component.sass
+++ b/src/app/form/form.component.sass
@@ -6,3 +6,7 @@ input
     width: 50%
     margin-top: 10px 
     height: 40px   
+.center 
+    display: flex
+    flex-direction: column
+    align-items: center
