--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,6 @@
 <app-trending></app-trending>
 <h2 class="recommendhd">Recommended For You</h2>
 <app-recommended></app-recommended>
+<div class='center'>
 <app-footer></app-footer>
+<div>
