--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -15,3 +15,8 @@ form
     margin-left: -10px
     margin-top: 30px
     width: 10%
+
+.center 
+    display: flex
+    flex-direction: column
+    align-items: center
