--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,4 +14,6 @@ to fans all over the world.</h4>
 <div class =' helper'>
 <img class='cute'[src]="'https://i.pinimg.com/originals/a9/7c/21/a97c21d633055f968ab0364c0ed656d4.gif'">
 </div>
+<div class='center'>
 <app-footer></app-footer>
+<div>
