--- a/src/app/about/about.component.sass
+++ b/src/app/about/about.component.sass
@@ -14,3 +14,7 @@ h4
     text-align: center
     margin: 10px
     width: 800px
+.center 
+    display: flex
+    flex-direction: column
+    align-items: center
