--- a/src/app/form/form.component.sass
+++ b/src/app/form/form.component.sass
@@ -2,11 +2,26 @@ form
     display: flex
     align-items: center
     flex-direction: column
-input
+.input
     width: 50%
-    margin-top: 10px 
-    height: 40px   
+    margin-top: 20px 
+    height: 45px   
+.submit
+    border: none
+    background-color: #A5DAFA
+    padding: 10px
+    color: white
+    border-radius: 15px
+    margin-left: -5px    
+    width: 100%
+.addto
+    width: 10%
+    margin: 20px 0 21% 0
+    padding: 10px 0 0 0
+    
 .center 
     display: flex
     flex-direction: column
     align-items: center
+
+    
