--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,8 +1,10 @@
 <form #myform='ngForm' (ngSubmit)='handleSubmit(myform)'>
-<input type ='email' name='email' placeholder='email'ngModel>
-<input type ='password' name='password' placeholder='password' ngModel>
-<input type='submit' value='submit'>
+<input class='input' type ='email' name='email' placeholder='email' ngModel>
+<input class='input' type ='password' name='password' placeholder='password' ngModel>
+<a class="nav-link addto" [routerLink]="'/login'" >
+<input  class='submit'type='submit' value='submit'></a>
 </form>
 <div class='center'>
 <app-footer></app-footer>
 <div>
+
