--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -14,7 +14,9 @@ form
     border-radius: 15px
     margin-left: -10px
     margin-top: 30px
+    margin-bottom: 21%
     width: 10%
+   
 
 .center 
     display: flex
