responsive looking good?

--- a/src/app/recommended/recommended.component.html
+++ b/src/app/recommended/recommended.component.html
@@ -1,1 +1,3 @@
-<img class="recommend" src="https://bestsimilar.com/img/movie/thumb/17/64184.jpg">
+<div class="recommend">
+<img  src="https://bestsimilar.com/img/movie/thumb/17/64184.jpg">
+</div>
