--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     <ul class="navbar-nav flexme">
       <li class="nav-item active">
         <!-- Step 4: Close the menu when a link is clicked. -->
-        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Home</a>
+        <a class="nav-link" [routerLink]="''" (click)="isMenuCollapsed = true">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'/show'" routerLinkActive="active" (click)="isMenuCollapsed = true">Explore</a>
