--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,7 +4,7 @@
 @import '~bootstrap/scss/bootstrap'
 
 .carousel-inner .sr-only 
-   display: none
+    display: none
 
 .carousel-inner
     text-align: center
@@ -15,6 +15,8 @@
 .carousel-control-next
     color: black
 
+.navbar
+    align-items: left!important
 
 .carousel-control-next-icon
     background-color: black
@@ -27,21 +29,12 @@
     display: flex
     gap: 20px
 .carousel-indicators li
-   background-color: black
-   width: 20px
-   height: 20px
-   border-radius: 100%
-
+    background-color: black
+    width: 20px
+    height: 20px
+    border-radius: 100%
 body
     height: fit-content
-    
-    
-
-.navbar  
-    flex-direction: column
-    gap: 60px
-
-
 .trending
     display: flex
     flex-direction: row
@@ -50,8 +43,23 @@ body
 .trending img
     height: 500px
     width: 333px
-
 .picsum-img-wrapper img
-    width: 966px
-    height: 547px
+    width: 425px
+    height: 300px
+.recommend
+    display: flex
+    flex-direction: column
+    align-items: center
+@media only screen and (min-width: 1000px)   
+    
+    .picsum-img-wrapper img
+        width: 966px
+        height: 547px
+        
+    .navbar  
+        flex-direction: column
+        gap: 60px
+    .carousel-inner
+        text-align: center
 
+   
