video added to homescreen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <div class='helper'>
 <img class="logo" src="https://res.cloudinary.com/dx3a3l6k0/image/upload/v1631742201/Cute_Love_Floral_Illustration_Logo_fpbc4m_mqq4aq.png"> 
 </div>
+<youtube-player
+videoId="1i1xABoJGC0"
+muted = true
+playing= true
+loop = true
+[playerVars]="playerConfig"
+>
+</youtube-player>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
   
 
