my-list styling caught up

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,11 @@
-
+<youtube-player
+videoId="1i1xABoJGC0"
+muted = true
+playing= true
+loop = true
+[playerVars]="playerConfig"
+>
+</youtube-player>
 <app-carousel></app-carousel>
 <h2 class="trendhd">Trending</h2>
 <app-trending></app-trending>
