--- a/src/app/my-list/my-list.component.sass
+++ b/src/app/my-list/my-list.component.sass
@@ -1,21 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap')
 
-.img-fluid
-    width: 240px
-    height: 300px
-
 .center 
     display: flex
     flex-direction: column
-    align-items: center
-.card
-    width: 1000px!important
-.card-title
-    font-size: 35px
-    font-family: 'Cinzel', serif
-.card-text 
-    font-size: 25px
-    margin-top: 5%
 .card-body button   
     border: none
     background-color: #A5DAFA
@@ -23,3 +10,22 @@
     color: white
     border-radius: 15px
     margin-left: -10px
+
+@media only screen and (min-width: 1000px)
+    .img-fluid
+        width: 240px
+        height: 300px
+
+    .center 
+        align-items: center
+
+    .card
+        width: 1000px!important
+    .card-title
+        font-size: 35px
+        font-family: 'Cinzel', serif
+    .card-text 
+        font-size: 25px
+        margin-top: 5%
+
+
