--- a/src/styles.sass
+++ b/src/styles.sass
@@ -50,6 +50,8 @@ body
     display: flex
     flex-direction: column
     align-items: center
+a .sr-only
+    display: none
 @media only screen and (min-width: 1000px)   
     
     .picsum-img-wrapper img
