styling for login sign-up

--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -3,3 +3,34 @@
     height: 365px
 hr
     margin-top: 30px
+img
+    width: 100px
+    height: 100px
+    float: right
+.social
+    display: flex
+    width: 100%
+    justify-content: flex-end
+    gap: 10px
+    margin-right: 5%
+.test
+    display: flex
+h5
+    width: 100%
+    margin-left: 8%
+    pading: 0 10px 10px 10px
+    margin-bottom: 5%
+p
+    margin-left: 5%
+    
+    margin-bottom: 0
+    margin-top: 6%
+h1
+    background: #CF1F7D
+    background: -webkit-radial-gradient(circle farthest-corner at center center, #CF1F7D 32%, #0BE378 97%)
+    background: -moz-radial-gradient(circle farthest-corner at center center, #CF1F7D 32%, #0BE378 97%)
+    background: radial-gradient(circle farthest-corner at center center, #CF1F7D 32%, #0BE378 97%)
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    font-size: 40px
+    padding: 0 25px 15px 25px
