--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,19 @@
 <hr/>
-<img class='cuter' [src]= "'https://res.cloudinary.com/dt5zbnwvr/image/upload/v1632239846/Screen_Shot_2021-09-21_at_10.56.17_AM_uxu4w7.png'">
+<div class=footer>
+<h1>KDrama Love</h1>
+<img src='https://scontent-ort2-1.xx.fbcdn.net/v/t1.6435-9/80998304_136163157838653_1680956723986169856_n.png?_nc_cat=106&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=kjJCq31oTL4AX9UX9mT&tn=CCaQ-P_IPT4N8mVT&_nc_ht=scontent-ort2-1.xx&oh=44d7d8e290ce59b1ba9d282fb066d9ef&oe=61787930'>
+
+<div class = 'test'>
+<h5>Contact us </h5>
+<div class = 'social'>
+
+<fa-icon [icon]="faTwitter"></fa-icon>
+<fa-icon [icon]="faFacebook"></fa-icon>
+<fa-icon [icon]="faInstagram"></fa-icon>
+<fa-icon [icon]="faReddit"></fa-icon>
+<fa-icon [icon]="faTiktok"></fa-icon>
+
+</div>
+</div>
+</div>
+<p>@Copyright 2021</p>
