--- a/src/app/form/form.component.sass
+++ b/src/app/form/form.component.sass
@@ -12,16 +12,11 @@ form
     padding: 10px
     color: white
     border-radius: 15px
-    margin-left: -5px    
-    width: 100%
-.addto
-    width: 10%
-    margin: 20px 0 21% 0
-    padding: 10px 0 0 0
+    margin-left: -10px
+    margin-top: 30px
+    margin-bottom: 21%
+    width: 150%
+
     
-.center 
-    display: flex
-    flex-direction: column
-    align-items: center
 
     
