--- a/src/app/my-list/my-list.component.sass
+++ b/src/app/my-list/my-list.component.sass
@@ -10,7 +10,8 @@
     color: white
     border-radius: 15px
     margin-left: -10px
-
+h1
+    text-align: center
 @media only screen and (min-width: 1000px)
     .img-fluid
         width: 240px
