--- a/src/app/my-list/my-list.component.html
+++ b/src/app/my-list/my-list.component.html
@@ -1,5 +1,7 @@
 <div class='center'>
 <h1>My List</h1>
+<p> Go to explore and click a movie to be able to add to list</p>
+
 <div class='allcard' *ngFor="let shows of shows; index as i">
 
 <div class="card mb-3 " >
