--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -10,11 +10,12 @@ img
 .social
     display: flex
     width: 100%
-    justify-content: flex-end
-    gap: 10px
-    margin-right: 5%
+    justify-content: flex-start
+    gap: 30px
+    margin-left: 7%
 .test
     display: flex
+    flex-direction: column
 h5
     width: 100%
     margin-left: 8%
@@ -34,3 +35,30 @@ h1
     -webkit-text-fill-color: transparent
     font-size: 40px
     padding: 0 25px 15px 25px
+
+@media only screen and (min-width: 768px)
+    img
+        width: 200px
+        height: 200px
+        
+    .social       
+        justify-content: flex-start
+        gap: 30px
+        margin-left: 5%
+    h5
+        margin-left: 5%
+    fa-icon
+        font-size: 20px
+
+@media only screen and (min-width: 1024px)
+    h1
+        font-size: 50px
+    img
+        width: 250px
+        height: 250px
+    h5
+        font-size: 30px
+    p
+        font-size: 20px
+    fa-icon
+        font-size: 30px
