--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,19 +1,38 @@
 <ngb-carousel [interval]=0 >
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="https://images-na.ssl-images-amazon.com/images/I/71bbd82fQiL._RI_.jpg">
+      <youtube-player
+videoId="wdHeiVf0mds"
+muted = true
+playing= true
+loop = true
+
+>
+</youtube-player>
     </div>
     
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-       <img src= "http://puui.qpic.cn/vcover_hz_pic/0/4atd5mcgi2uwnvr1580269669/0">
+       <youtube-player
+videoId="eXMjTXL2Vks"
+
+
+>
+</youtube-player>
     </div>
     
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-       <img src="https://images.squarespace-cdn.com/content/v1/5796c3fc15d5dbda8ad72bf9/1594350975169-1IR3CNR6KGT3ARR3PBPV/CrashLandingOnYou.jpg">
+       <youtube-player
+videoId="1IjMTR2DxlA"
+muted = true
+playing= true
+loop = true
+
+>
+</youtube-player>
     </div>
    
   </ng-template>
