--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -62,3 +62,8 @@ h1
         font-size: 20px
     fa-icon
         font-size: 30px
+
+@media only screen and (min-width: 1024px)
+    img
+       width: 400px
+       height: 400px
