--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,8 @@
-<youtube-player
-videoId="1i1xABoJGC0"
-muted = true
-playing= true
-loop = true
-[playerVars]="playerConfig"
->
-</youtube-player>
 
+<app-carousel></app-carousel>
 <h2 class="trendhd">Trending</h2>
 <app-trending></app-trending>
 <h2 class="recommendhd">Recommended For You</h2>
 <app-recommended></app-recommended>
 <div class='center'>
 <app-footer></app-footer>
-<div>
