responsive for shows and mylist

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,7 +8,10 @@
 
 .carousel-inner
     text-align: center
-    
+    width:80%
+    margin-left: 10%
+    height: 5%
+    margin-top: 5%
 
 .carousel-control-prev
     color: black
@@ -33,6 +36,8 @@
     width: 20px
     height: 20px
     border-radius: 100%
+div .ytp-cued-thumbnail-overlay-image
+   width: 60%!important
 body
     height: fit-content
 .trending
