--- a/src/app/all-dramas/all-dramas.component.sass
+++ b/src/app/all-dramas/all-dramas.component.sass
@@ -7,7 +7,10 @@
         width: 240px
         height: 300px
 
- 
+    .center
+        display: flex
+        flex-direction: column
+        align-items: center
 
     .card
         width: 1000px!important
