--- a/src/app/my-list/my-list.component.sass
+++ b/src/app/my-list/my-list.component.sass
@@ -15,6 +15,10 @@ h1
     .img-fluid
         width: 240px
         height: 300px
+    .center
+        display: flex
+        flex-direction: column
+        align-items: center
 
    
 
