--- a/src/app/single-drama/single-drama.component.sass
+++ b/src/app/single-drama/single-drama.component.sass
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap')
-
 .singledrama
-    display: grid
-    grid-template-rows: auto
-    grid-template-columns: auto auto
-    gap: 20px
+    display: flex
+    flex-direction: column
+    align-items: center
+    padding: 10%
+
 .actor
     width: 170px
     height: 180px
     border-radious: 100%
-.actors
-   
+
+.actors   
     text-align: center
     display: flex
     flex-direction: column
@@ -20,27 +20,24 @@
     width: 325px
     height: 350px
    
-.title
-    grid-row-start: 1
-    grid-column-start: 1
+.title    
     display: flex
     flex-direction: column
     gap: 30px
     width: 440px
     font-family: 'Cinzel', serif
     font-size: 30px
-.singledrama p
-    grid-row-start: 2
-    grid-coloumn-start: 2
+
     
 
 .flex
     display: flex
-    grid-column-start: 2
-    gap: 20px
+    flex-direction: row
+    width: 500px 
+    gap: 25px
+    overflow: scroll
 .info
-    display: flex
-    grid-column-start: 2
+    display: flex   
     flex-direction: column
     margin-top: 8%
 
@@ -51,3 +48,20 @@
     color: white
     border-radius: 15px
     margin-left: -10px
+@media only screen and (min-width: 1000px)
+    .singledrama
+        display: grid
+        grid-template-rows: auto
+        grid-template-columns: auto auto
+        gap: 20px
+    .title
+        grid-row-start: 1
+        grid-column-start: 1
+    .info
+        grid-column-start: 2
+    .flex
+        grid-column-start: 2
+        gap: 20px
+    .singledrama p
+        grid-row-start: 2
+        grid-coloumn-start: 2
