--- a/src/app/all-dramas/all-dramas.component.sass
+++ b/src/app/all-dramas/all-dramas.component.sass
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap')
+.img-fluid
+        width: 240px
+        height: 300px
 
-
-
+.col-md-4
+    display: flex
+    align-items: center
+    justify-content: space-around
+.card-body
+    display: flex
+    align-items: center
+    flex-direction: column
 @media only screen and (min-width: 1000px)
     .img-fluid
         width: 240px
