--- a/src/app/single-drama/single-drama.component.sass
+++ b/src/app/single-drama/single-drama.component.sass
@@ -36,6 +36,8 @@
     width: 500px 
     gap: 25px
     overflow: scroll
+    border: none
+    margin-top: 20px
 .info
     display: flex   
     flex-direction: column
@@ -62,6 +64,7 @@
     .flex
         grid-column-start: 2
         gap: 20px
+        overflow: visible
     .singledrama p
         grid-row-start: 2
         grid-coloumn-start: 2
